k8s/ingress.yaml
# We will configure Ingress later for routing domains (like admin.trackify.com)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trackify-ingress
spec:
  rules: []
